feat: docker & rabbitmq

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
   },
   "esm": true,
   "compileOnSave": true,
-  "include": ["src", "./src/server.ts"]
+  "include": ["src", "./src/server.ts", "rabbitmq_trigger"]
 }
